--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@ table,tr,td{
     text-align: center;
     font-size: 50px;
 }
+.a1{
+    background-color:#00B6BC;
+}
 body{
     background-color: black;
 }
